@@ -4,6 +4,9 @@
 Added: -testjar supports jar file with no testng.xml file
 Fixed: TESTNG-231: NullPointerException thrown converting a suite to XML (Mark)
 
+Doc:
+Added -testjar
+
 ===========================================================================
 5.8
 
